# langchain-chatbot

./: .gitignore  DEPENDENCY_FIX.md  IMPLEMENTATION_SUMMARY.md  README.md  agents.md  pyproject.toml  start-all.sh  start-backend.sh  verify.sh
backend/: .env.example  LANGCHAIN_IMPORT_FIX.md  LANGCHAIN_IMPORT_FIX_QUICK.md  QUICK_FIX.md  chat_service.py  chatbot_engine.py  config.py  install-deps.sh  logger.py  main.py  models.py  pyproject.toml  pyrightconfig.json  requirements.txt  start.sh  test_api.py  test_chatbot_engine.py  test_imports.py  test_tool_toggle.py
backend/agent/: __init__.py  callback_handler.py  engine.py  factory.py  tools.py
backend/api/: __init__.py  chat.py  general.py  sessions.py
backend/db/: base.py  models.py  repositories.py
backend/prompts/: __init__.py  templates.py
backend/tools/: calculator.py  tavily_search.py
backend/utils/: __init__.py  cancel_manager.py  message_converter.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatContainer.tsx  ConfigModal.tsx  DebugPanel.tsx  InputArea.tsx  MessageList.tsx  ProcessDisplay.tsx  SettingsModal.tsx  ToolDisplay.tsx  ToolOutputDisplay.tsx
frontend/src/hooks/: useChat.ts
frontend/src/services/: api.ts
frontend/src/store/: chatStore.ts  settingsStore.ts
frontend/src/types/: index.ts
